--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Champlain, Lake -- History'
 - !lcsh 'Montréal (Québec) -- History'
 - !lcc 'E186'
+- GITenberg
 title: "Historic Handbook of the Northern Tour\r\nLakes George and Champlain; Niagara;\
   \ Montreal; Quebec"
 url: http://www.gutenberg.org/ebooks/35216
